[tool.poetry]
name = "optimicon"
version = "0.1.0"
description = ""
authors = ["odiwan1991"]

[tool.poetry.dependencies]
python = "^3.8"
tabpy = "^0.8.9"
tableaudocumentapi = "^0.6.0"
tableauserverclient = "^0.9.0"
pantab = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
